--- a/source/form.html
+++ b/source/form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,91 +8,165 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-  <header class="main-header">
-    <div class="main-nav__wrapper main-nav__wrapper--bg">
-      <nav class="main-nav main-nav--closed main-nav--no-js">
-        <div class="container">
-          <a class="logo" href="index.html"></a>
-          <button class="button-toggle"></button>
-        </div>
-        <ul class="main-nav__list">
-          <li class="main-nav__item"><a class="main-nav__link" href="#">Главная</a></li>
-          <li class="main-nav__item"><a class="main-nav__link" href="#">Фотографии</a></li>
-          <li class="main-nav__item"><a class="main-nav__link main-nav__link--active">Конкурс</a></li>
-          <li class="main-nav__item"><a class="main-nav__link" href="#">Html Academy</a></li>
-        </ul>
-      </nav>
-      <h1 class="main-title container">Конкурс на самое безбашенное путешествие с Пинк</h1>
+
+<body class="body">
+  <header class="header js-header is-no-js">
+    <div class="header__wrapper">
+      <div class="header__top">
+        <a class="logo logo_mobile" href="index.html">
+          <svg class="icon icon_second icon_logo-mobile">
+            <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
+          </svg>
+        </a>
+        <button class="header__btn js-header__btn">
+          <svg class="icon icon_second icon_burger js-icon_toggle is-opened">
+            <use xlink:href="img/sprite.svg#icon-menu-burger"></use>
+          </svg>
+          <svg class="icon icon_second icon_close js-icon_toggle">
+            <use xlink:href="img/sprite.svg#icon-menu-cross"></use>
+          </svg>
+        </button>
+      </div>
     </div>
+    <nav class="nav js-nav is-no-js">
+      <ul class="nav__list">
+        <li class="nav__item">
+          <a class="nav__link" href="index.html">Главная</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link" href="photo.html">Фотографии</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link is-active">Конкурс</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Html Academy</a>
+        </li>
+      </ul>
+    </nav>
   </header>
   <main class="main">
-    <form class="form" action="https://echo.htmlacademy.ru" method="post">
-      <section class="form-name form-name__form container">
-        <p class="form-name__title">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
-        <label  class="form-name__label" for="form-surname">Фамилия:</label>
-        <input class="form-name__input" type="text" name="surname" id="form-surname" placeholder="Укажите фамилию *">
-        <label class="form-name__label" for="form-first-name">Имя:</label>
-        <input class="form-name__input" type="text" name="first-name" id="form-first-name" placeholder="Введите ваше имя *">
-        <label class="form-name__label" for="form-patronymic">Отчество:</label>
-        <input class="form-name__input" type="text" name="patronymic" id="form-patronymic" placeholder="Ну и отчество тоже">
-      </section>
-      <section class="form-travels form-travels__form container">
-        <h4 class="form-travels__title">Ваши безбашенные достижения&nbsp;в&nbsp;путешествии</h4>
-        <input class="visually-hidden" type="checkbox" name="selfie-shark" id="form-selfie-shark">
-        <label class="form-travels__label" for="form-selfie-shark">Сделал селфи с акулой</label>
-        <input class="visually-hidden" type="checkbox" name="tanned-beach" id="form-tanned">
-        <label class="form-travels__label" for="form-tanned">Обгорел на пляже</label>
-        <input class="visually-hidden" type="checkbox" name="saw-chuck-norris" id="form-chuck-norris">
-        <label class="form-travels__label" for="form-chuck-norris">Видел Чака Норриса</label>
-        <input class="visually-hidden" type="checkbox" name="bought-souvenirs" id="form-bought-souvenirs">
-        <label class="form-travels__label" for="form-bought-souvenirs">Накупил сувениров</label>
-        <input class="visually-hidden" type="checkbox" name="held-tower" id="form-held-tower">
-        <label class="form-travels__label" for="form-held-tower">Удержал башню</label>
-        <input class="visually-hidden" type="checkbox" name="broken-hotel" id="form-broken-hotel">
-        <label class="form-travels__label" for="form-broken-hotel">Разгромил отель</label>
-      </section>
-      <section class="form-contacts form-contacts__form container">
-        <label class="form-contacts__label" for="form-phone">Номер телефона</label>
-        <input class="form-contacts__input" type="tel" name="phone" id="form-phone" placeholder="Номер, пожалуйста">
-        <label class="form-contacts__label" for="form-mail">Адрес почты</label>
-        <input class="form-contacts__input" type="email" name="mail" id="form-mail" placeholder="Введите почту *">
-      </section>
-      <section class="form-radio form-radio__form container">
-        <h4 class="form-radio__title">С каким приложением путешествовали?</h4>
-        <input class="visually-hidden" type="radio" name="radio-platform" id="radio-ios">
-        <label class="form-radio__label" for="radio-ios">Pink для iOS</label>
-        <input class="visually-hidden" type="radio" name="radio-platform" id="radio-android">
-        <label class="form-radio__label" for="radio-android">Pink на Android</label>
-        <input class="visually-hidden" type="radio" name="radio-platform" id="radio-windows">
-        <label class="form-radio__label" for="radio-windows">Windows Phone</label>
-      </section>
-      <section class="form-textarea form-textarea__form container">
-        <h4 class="form-textarea__title">Опишите свои эмоции</h4>
-        <textarea class="form-textarea__input" name="emotions" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
-      </section>
-      <div class="container">
-        <button class="button-form button-form__form" type="submit">Отправить форму</button>
-        <p class="form-required form-required__form"><span class="form-mark">*</span> &mdash; обязательные поля</p>
+    <section class="banner">
+      <div class="banner__top banner__top_inner">
+        <div class="banner__title">
+          <h1 class="title title_one title_wrap_center">Конкурс на самое безбашенное путешествие с Пинк</h1>
+        </div>
       </div>
+    </section>
+    <form class="form" action="https://echo.htmlacademy.ru" method="post">
+      <section class="form__section">
+        <div class="container">
+          <p class="form__text">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу
+            бонусную карту!</p>
+          <div class="form__group">
+            <label class="form__label" for="surname">Фамилия:</label>
+            <input class="form__input" type="text" name="surname" id="surname" placeholder="Укажите фамилию *" required>
+          </div>
+          <div class="form__group">
+            <label class="form__label" for="first-name">Имя:</label>
+            <input class="form__input" type="text" name="first-name" id="first-name" placeholder="Введите ваше имя *"
+              required>
+          </div>
+          <div class="form__group">
+            <label class="form__label" for="patronymic">Отчество:</label>
+            <input class="form__input" type="text" name="patronymic" id="patronymic" placeholder="Ну и отчество тоже">
+          </div>
+        </div>
+      </section>
+      <section class="form__section form__section_bg">
+        <div class="container">
+          <h4 class="form__title">Ваши безбашенные достижения&nbsp;в&nbsp;путешествии</h4>
+          <div class="form__group">
+            <input class="form__checkbox visually-hidden" type="checkbox" name="selfie-shark" id="selfie-shark">
+            <label class="form__label-checkbox" for="selfie-shark">Сделал селфи с акулой</label>
+          </div>
+          <div class="form__group">
+            <input class="form__checkbox visually-hidden" type="checkbox" name="tanned-beach" id="tanned-beach">
+            <label class="form__label-checkbox" for="tanned-beach">Обгорел на пляже</label>
+          </div>
+          <div class="form__group">
+            <input class="form__checkbox visually-hidden" type="checkbox" name="chuck-norris" id="chuck-norris">
+            <label class="form__label-checkbox" for="chuck-norris">Видел Чака Норриса</label>
+          </div>
+          <div class="form__group">
+            <input class="form__checkbox visually-hidden" type="checkbox" name="buy-souvenirs" id="buy-souvenirs">
+            <label class="form__label-checkbox" for="buy-souvenirs">Накупил сувениров</label>
+          </div>
+          <div class="form__group">
+            <input class="form__checkbox visually-hidden" type="checkbox" name="held-tower" id="held-tower">
+            <label class="form__label-checkbox" for="held-tower">Удержал башню</label>
+          </div>
+          <div class="form__group">
+            <input class="form__checkbox visually-hidden" type="checkbox" name="broken-hotel" id="broken-hotel">
+            <label class="form__label-checkbox" for="broken-hotel">Разгромил отель</label>
+          </div>
+        </div>
+      </section>
+
+      <section class="form__section">
+        <div class="container">
+          <div class="form__group">
+            <label class="form__label" for="phone">Номер телефона</label>
+            <input class="form__input" type="tel" name="phone" id="phone" placeholder="Номер, пожалуйста">
+          </div>
+          <div class="form__group">
+            <label class="form__label" for="mail">Адрес почты</label>
+            <input class="form__input" type="email" name="mail" id="mail" placeholder="Введите почту *" required>
+          </div>
+        </div>
+      </section>
+      <!--
+        <section class="form-radio form-radio__form">
+          <h4 class="form-radio__title">С каким приложением путешествовали?</h4>
+          <input class="visually-hidden" type="radio" name="radio-platform" id="radio-ios">
+          <label class="form-radio__label" for="radio-ios">Pink для iOS</label>
+          <input class="visually-hidden" type="radio" name="radio-platform" id="radio-android">
+          <label class="form-radio__label" for="radio-android">Pink на Android</label>
+          <input class="visually-hidden" type="radio" name="radio-platform" id="radio-windows">
+          <label class="form-radio__label" for="radio-windows">Windows Phone</label>
+        </section>
+        <section class="form-textarea form-textarea__form">
+          <h4 class="form-textarea__title">Опишите свои эмоции</h4>
+          <textarea class="form-textarea__input" name="emotions"
+            placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+        </section>
+        <button class="button-form button-form__form" type="submit">Отправить форму</button>
+        <p class="form-required form-required__form"><span class="form-mark">*</span> &mdash; обязательные поля</p> -->
     </form>
   </main>
-  <footer class="main-footer container">
-    <a class="logo-full logo-full__main-footer" href="index.html"><img src="img/logo-pink-blue-mobile.svg" alt="logotype"></a>
-    <div class="social social__footer">
-      <a class="social__item social__item--twitter" href="#">Twitter</a>
-      <a class="social__item social__item--facebook" href="#">Facebook</a>
-      <a class="social__item social__item--youtube" href="#">YouTube</a>
+  <footer class="footer">
+    <a class="logo logo_tablet" href="index.html">
+      <svg class="icon icon_logo-tablet icon_first">
+        <use xlink:href="img/sprite.svg#logo-pink-blue-mobile"></use>
+      </svg>
+    </a>
+    <div class="social social_indent">
+      <a class="social__item social__item_tw" href="#" aria-labelledby="Twitter">
+        <svg class="icon icon_social icon_third">
+          <use xlink:href="img/sprite.svg#icon-twitter"></use>
+        </svg>
+      </a>
+      <a class="social__item social__item_fb" href="#" aria-labelledby="Facebook">
+        <svg class="icon icon_social icon_third">
+          <use xlink:href="img/sprite.svg#icon-facebook"></use>
+        </svg>
+      </a>
+      <a class="social__item social__item_yt" href="#" aria-labelledby="YouTube">
+        <svg class="icon icon_social icon_third">
+          <use xlink:href="img/sprite.svg#icon-youtube"></use>
+        </svg>
+      </a>
     </div>
-    <div class="main-footer__copyright">
+    <div class="footer__copyright">
       <span>Разработано</span>
-      <a class="logo-htmlacademy" href="https://htmlacademy.ru/intensive/adaptive">
-        <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
-          <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.472,8.017l13.43-7.99l0.042-0.026V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 l-0.001-0.104L13.407,5.28l-0.088-0.056v0.109L1.925,12.118V3.147l11.547-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.013,1.415l5.904,3.513l-0.86,0.507l-5.031-2.992l-0.013,1.415l3.827,2.275l-0.782,0.523l-3.032-1.787 l-0.013,1.413l1.852,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.015,1.044l-7.941-4.728L5.395,19.65 l7.979,4.796l0.017,1.076l-7.972-4.741l-0.013,1.415l8.021,4.821l0.045,0.026l8.143-4.872v-1.268l-0.011-0.148v-3.761l3.415-2.036 v10.02L13.472,31.85L1.925,24.979V15.127z"/>
+      <a class="logo logo_academy" href="https://htmlacademy.ru/intensive/adaptive">
+        <svg class="icon icon_logo-academy icon_third">
+          <use xlink:href="img/sprite.svg#logo-htmlacademy"></use>
         </svg>
       </a>
     </div>
   </footer>
   <script src="scripts/scripts.js"></script>
 </body>
+
 </html>
