--- a/source/index.html
+++ b/source/index.html
@@ -1,131 +1,281 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Academy: Пинк</title>
-  <link rel="stylesheet" href="css/normalize.css">
+  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-  <header class="main-header">
-    <div class="main-nav__wrapper main-nav__wrapper--bg-phone">
-      <nav class="main-nav main-nav--closed main-nav--no-js">
-        <div class="container">
-          <a class="logo"></a>
-          <button class="button-toggle"></button>
-        </div>
-        <ul class="main-nav__list">
-            <li class="main-nav__item"><a class="main-nav__link main-nav__link--active">Главная</a></li>
-            <li class="main-nav__item"><a class="main-nav__link" href="#">Фотографии</a></li>
-            <li class="main-nav__item"><a class="main-nav__link" href="#">Конкурс</a></li>
-            <li class="main-nav__item"><a class="main-nav__link" href="#">Html Academy</a></li>
-          </ul>
-      </nav>
-    </div>
-    <div class="download container">
-      <h1 class="download__title">Взгяните на&nbsp;жизнь иначе!</h1>
-      <a class="button download__button" href="#">Скачать приложение</a>
-      <div class="download__box">
-        <a href="#" class="download__link download__link--app-store">app-store</a>
-        <a href="#" class="download__link download__link--android">android</a>
-        <a href="#" class="download__link download__link--windows">windows</a>
+
+<body class="body">
+  <header class="header js-header is-no-js">
+    <div class="header__wrapper">
+      <div class="header__top">
+        <a class="logo logo_mobile" href="index.html">
+          <svg class="icon icon_second icon_logo-mobile">
+            <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
+          </svg>
+        </a>
+        <button class="header__btn js-header__btn">
+          <svg class="icon icon_second icon_burger js-icon_toggle is-opened">
+            <use xlink:href="img/sprite.svg#icon-menu-burger"></use>
+          </svg>
+          <svg class="icon icon_second icon_close js-icon_toggle">
+            <use xlink:href="img/sprite.svg#icon-menu-cross"></use>
+          </svg>
+        </button>
       </div>
-      <p class="download__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
     </div>
+    <nav class="nav js-nav is-no-js">
+      <ul class="nav__list">
+        <li class="nav__item">
+          <a class="nav__link" href="index.html">Главная</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link" href="photo.html">Фотографии</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link is-active">Конкурс</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Html Academy</a>
+        </li>
+      </ul>
+    </nav>
   </header>
   <main class="main">
-    <section class="offer container">
-      <p class="offer__title">Устали от серости мегаполиса?</p>
-      <p class="offer__title">Нам есть, что вам предложить!</p>
+    <section class="banner">
+      <div class="banner__top">
+        <picture>
+          <!-- <source src="" media="(min-width: 600px)"> -->
+          <img class="image image_banner" src="./img/iphone-hand-mobile@1x.png" alt="Приложение в телефоне"
+            style="position: absolute; bottom: 0; width: 258px;">
+        </picture>
+      </div>
+      <article class="load">
+        <div class="container">
+          <a class="button button_first" href="#">Скачать приложение</a>
+          <ul class="load__list">
+            <li class="load__item">
+              <a class="load__link" href="#">
+                <svg class="icon">
+                  <use xlink:href="img/sprite.svg#logo-apple"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="load__item">
+              <a class="load__link" href="#">
+                <svg class="icon">
+                  <use xlink:href="img/sprite.svg#logo-android"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="load__item">
+              <a class="load__link" href="#">
+                <svg class="icon">
+                  <use xlink:href="img/sprite.svg#logo-microsoft"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+          <p class="load__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+        </div>
+      </article>
     </section>
-    <section class="advantages container">
-      <div class="advantages__box">
-        <h3 class="advantages__title">Поднимает настроение</h3>
-        <p class="advantages__item">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
-        <h3 class="advantages__title">Меняет мир вокруг</h3>
-        <p class="advantages__item">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-        <h3 class="advantages__title">Заводит новых друзей</h3>
-        <p class="advantages__item">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+    <section class="offer">
+      <div class="container">
+        <p class="offer__title">Устали от серости мегаполиса?</p>
+        <p class="offer__title">Нам есть, что вам предложить!</p>
+      </div>
+      <div class="body__figure">
+        <img class="image" src="./img/bg-triangle-white.svg" alt="Фон блока">
       </div>
     </section>
+    <section class="advantages">
+      <div class="container">
+        <ul class="advantages__list">
+          <li class="advantages__item">
+            <h3 class="advantages__title">Поднимает настроение</h3>
+            <p class="advantages__text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в
+              несколько
+              кликов!</p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Меняет мир вокруг</h3>
+            <p class="advantages__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить
+              эффект</p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Заводит новых друзей</h3>
+            <p class="advantages__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых
+            </p>
+          </li>
+        </ul>
+        <div class="advantages__images">
+          <picture>
+            <img class="advantages__img" src="./img/iphone-screen-mobile@1x.png" alt="Изображение iphone">
+          </picture>
+        </div>
+      </div>
+    </section>
+    <section class="reivew">
+      <div class="container">
+        <div class="reivew__slider">
+          <h3 class="reivew__title">Николай Петров</h3>
+          <p class="reivew__title-description">25 лет, водитель трамвая</p>
+          <p class="reivew__content">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные
+            серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+          <ul class="pagination">
+            <li class="pagination__item pagination__item_active">&bull;</li>
+            <li class="pagination__item">&bull;</li>
+            <li class="pagination__item">&bull;</li>
+          </ul>
+        </div>
+        <div class="body__figure">
+          <img class="image" src="./img/bg-triangle-white.svg" alt="Фон блока">
+        </div>
+      </div>
+    </section>
+    <section class="price">
+      <div class="price__slider">
+        <ul class="price__list">
+          <li class="price__item price__item_top">База<br><span class="price__money">1,99 USD</span></li>
+          <li class="price__item">
+            <span>Розовый фильтр</span>
+            <svg class="icon icon_size_l icon_fourth">
+              <use xlink:href="img/sprite.svg#icon-yes"></use>
+            </svg>
+          </li>
+          <li class="price__item">
+            <span>Смайлики</span>
+            <svg class="icon icon_size_m icon_fifth">
+              <use xlink:href="img/sprite.svg#icon-no"></use>
+            </svg>
+          </li>
+          <li class="price__item">
+            <span>Комментарии</span>
+            <svg class="icon icon_size_m icon_fifth">
+              <use xlink:href="img/sprite.svg#icon-no"></use>
+            </svg>
+          </li>
+        </ul>
+        <ul class="price__list">
+          <li class="price__item price__item_top price__item_hit">Стандарт<br><span class="price__money">3,99 USD</span>
+          </li>
+          <li class="price__item">
+            <span>Розовый фильтр</span>
+            <svg class="icon icon_size_l icon_fourth">
+              <use xlink:href="img/sprite.svg#icon-yes"></use>
+            </svg>
+          </li>
+          <li class="price__item">
+            <span>Смайлики</span>
+            <svg class="icon icon_size_l icon_fourth">
+              <use xlink:href="img/sprite.svg#icon-yes"></use>
+            </svg>
+          </li>
+          <li class="price__item">
+            <span>Комментарии</span>
+            <svg class="icon icon_size_m icon_fifth">
+              <use xlink:href="img/sprite.svg#icon-no"></use>
+            </svg>
+          </li>
+        </ul>
+        <ul class="price__list">
+          <li class="price__item price__item_top">Анлим<br><span class="price__money">9,99 USD</span></li>
+          <li class="price__item">
+            <span>Розовый фильтр</span>
+            <svg class="icon icon_size_l icon_fourth">
+              <use xlink:href="img/sprite.svg#icon-yes"></use>
+            </svg>
+          </li>
+          <li class="price__item">
+            <span>Смайлики</span>
+            <svg class="icon icon_size_l icon_fourth">
+              <use xlink:href="img/sprite.svg#icon-yes"></use>
+            </svg>
+          </li>
+          <li class="price__item">
+            <span>Комментарии</span>
+            <svg class="icon icon_size_l icon_fourth">
+              <use xlink:href="img/sprite.svg#icon-yes"></use>
+            </svg>
+          </li>
+        </ul>
+      </div>
+      <ul class="pagination">
+        <li class="pagination__item pagination__item_active">&bull;</li>
+        <li class="pagination__item">&bull;</li>
+        <li class="pagination__item">&bull;</li>
+      </ul>
+    </section>
+    <section class="contacts">
+      <div class="container">
+        <p class="contacts__title">Остались вопросы?<br>Свяжитесь с нами!</p>
+        <b class="contacts__item">Звоните:
+          <a class="contacts__link" href="tel:+78125556666">+7 (812) 555-66-66</a>
+        </b>
+        <b class="contacts__item">Пишите:
+          <a class="contacts__link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+        </b>
+        <b class="contacts__item">Приезжайте в гости:
+          <a class="contacts__link" href="#">ул. Большая Конюшенная, 19/8</a>
+        </b>
+      </div>
+      <div class="body__figure">
+        <img class="image" src="./img/bg-triangle-white-footer.svg" alt="Фон блока">
+      </div>
+    </section>
+    <section class="map">
+      <!-- <imgс class="image" src="./img/bg-map-mobile@1x.png" alt="Понорама"> -->
+    </section>
+    <!--
     <article class="study container">
       <img class="study__timer" src="img/icon-timer.svg" width="240" height="276" alt="Таймер">
       <div class="study__wrapper">
         <h2 class="study__title">Эффект на&nbsp;24&nbsp;часа!</h2>
-        <p class="study__content">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
+        <p class="study__content">Британские ученые провели исследования и доказали, что положительный эффект от
+          использования приложения длится целые сутки!</p>
         <a class="study__link" href="#">Узнать больше об исследовании</a>
       </div>
     </article>
-    <section class="reivew container">
-      <div class="reivew__slider">
-        <h3 class="reivew__title">Николай Петров</h3>
-        <p class="reivew__title-description">25 лет, водитель трамвая</p>
-        <p class="reivew__content">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-        <div class="slider-inners">
-          <i class="slider__inner slider__inner--active">&bull;</i>
-          <i class="slider__inner">&bull;</i>
-          <i class="slider__inner">&bull;</i>
-        </div>
-      </div>
-    </section>
-    <section class="price container">
-      <div class="price__slider">
-        <ul class="price__list">
-          <li class="price__item-header">База<br><span class="price__money">1,99 USD</span></li>
-          <li class="price__item">Розовый фильтр</li>
-          <li class="price__item">Смайлики</li>
-          <li class="price__item">Комментарии</li>
-        </ul>
-        <ul class="price__list">
-          <li class="price__item-header price__item-header--hit">Стандарт<br><span class="price__money">3,99 USD</span></li>
-          <li class="price__item price__item--yes">Розовый фильтр</li>
-          <li class="price__item price__item--yes">Смайлики</li>
-          <li class="price__item price__item--no">Комментарии</li>
-        </ul>
-        <ul class="price__list">
-          <li class="price__item-header">Анлим<br><span class="price__money">9,99 USD</span></li>
-          <li class="price__item">Розовый фильтр</li>
-          <li class="price__item">Смайлики</li>
-          <li class="price__item">Комментарии</li>
-        </ul>
-      </div>
-      <div class="slider-inners">
-        <i class="slider__inner">&bull;</i>
-        <i class="slider__inner slider__inner--active">&bull;</i>
-        <i class="slider__inner">&bull;</i>
-      </div>
-    </section>
-    <section class="contacts container">
-      <p class="contacts__title">Остались вопросы?<br>Свяжитесь с нами!</p>
-      <b class="contacts__item">Звоните:
-        <a class="contacts__link" href="#">+7 (812) 555-66-66</a>
-      </b>
-      <b class="contacts__item">Пишите:
-        <a class="contacts__link" href="#">mail@htmlacademy.ru</a>
-      </b>
-      <b class="contacts__item">Приезжайте в гости:
-        <a class="contacts__link" href="#">ул. Большая Конюшенная, 19/8</a>
-      </b>
-    </section>
-    <section class="map"></section>
+     -->
   </main>
-  <footer class="main-footer main-footer--toggle container">
-    <a class="logo-full logo-full__main-footer" href="index.html"><img src="img/logo-pink-blue-mobile.svg" alt="logotype"></a>
-    <div class="social social__footer">
-      <a class="social__item social__item--twitter" href="#">Twitter</a>
-      <a class="social__item social__item--facebook" href="#">Facebook</a>
-      <a class="social__item social__item--youtube" href="#">YouTube</a>
+  <footer class="footer footer_none-mobile">
+    <a class="logo logo_tablet" href="index.html">
+      <svg class="icon icon_logo-tablet icon_first">
+        <use xlink:href="img/sprite.svg#logo-pink-blue-mobile"></use>
+      </svg>
+    </a>
+    <div class="social social_indent">
+      <a class="social__item social__item_tw" href="#" aria-labelledby="Twitter">
+        <svg class="icon icon_social icon_third">
+          <use xlink:href="img/sprite.svg#icon-twitter"></use>
+        </svg>
+      </a>
+      <a class="social__item social__item_fb" href="#" aria-labelledby="Facebook">
+        <svg class="icon icon_social icon_third">
+          <use xlink:href="img/sprite.svg#icon-facebook"></use>
+        </svg>
+      </a>
+      <a class="social__item social__item_yt" href="#" aria-labelledby="YouTube">
+        <svg class="icon icon_social icon_third">
+          <use xlink:href="img/sprite.svg#icon-youtube"></use>
+        </svg>
+      </a>
     </div>
-    <div class="main-footer__copyright">
+    <div class="footer__copyright">
       <span>Разработано</span>
-      <a class="logo-htmlacademy" href="https://htmlacademy.ru/intensive/adaptive">
-        <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
-          <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.472,8.017l13.43-7.99l0.042-0.026V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 l-0.001-0.104L13.407,5.28l-0.088-0.056v0.109L1.925,12.118V3.147l11.547-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.013,1.415l5.904,3.513l-0.86,0.507l-5.031-2.992l-0.013,1.415l3.827,2.275l-0.782,0.523l-3.032-1.787 l-0.013,1.413l1.852,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.015,1.044l-7.941-4.728L5.395,19.65 l7.979,4.796l0.017,1.076l-7.972-4.741l-0.013,1.415l8.021,4.821l0.045,0.026l8.143-4.872v-1.268l-0.011-0.148v-3.761l3.415-2.036 v10.02L13.472,31.85L1.925,24.979V15.127z"/>
+      <a class="logo logo_academy" href="https://htmlacademy.ru/intensive/adaptive">
+        <svg class="icon icon_logo-academy icon_third">
+          <use xlink:href="img/sprite.svg#logo-htmlacademy"></use>
         </svg>
       </a>
     </div>
   </footer>
   <script src="scripts/scripts.js"></script>
 </body>
+
 </html>
