--- a/source/index.html
+++ b/source/index.html
@@ -56,7 +56,7 @@
       </div>
       <article class="load">
         <div class="container">
-          <a class="button button_first" href="#">Скачать приложение</a>
+          <a class="button button_first button_size_l" href="#">Скачать приложение</a>
           <ul class="load__list">
             <li class="load__item">
               <a class="load__link" href="#">
@@ -250,17 +250,17 @@
       </svg>
     </a>
     <div class="social social_indent">
-      <a class="social__item social__item_tw" href="#" aria-labelledby="Twitter">
+      <a class="social__item social__item_tw" href="#">Twitter
         <svg class="icon icon_social icon_third">
           <use xlink:href="img/sprite.svg#icon-twitter"></use>
         </svg>
       </a>
-      <a class="social__item social__item_fb" href="#" aria-labelledby="Facebook">
+      <a class="social__item social__item_fb" href="#">Facebook
         <svg class="icon icon_social icon_third">
           <use xlink:href="img/sprite.svg#icon-facebook"></use>
         </svg>
       </a>
-      <a class="social__item social__item_yt" href="#" aria-labelledby="YouTube">
+      <a class="social__item social__item_yt" href="#">YouTube
         <svg class="icon icon_social icon_third">
           <use xlink:href="img/sprite.svg#icon-youtube"></use>
         </svg>
