finished mobile dev

--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Academy: Пинк</title>
-  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
+  <link rel="stylesheet" type="text/html" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -31,13 +31,13 @@
     <nav class="nav js-nav is-no-js">
       <ul class="nav__list">
         <li class="nav__item">
-          <a class="nav__link" href="index.html">Главная</a>
+          <a class="nav__link is-active">Главная</a>
         </li>
         <li class="nav__item">
           <a class="nav__link" href="photo.html">Фотографии</a>
         </li>
         <li class="nav__item">
-          <a class="nav__link is-active">Конкурс</a>
+          <a class="nav__link" href="form.html">Конкурс</a>
         </li>
         <li class="nav__item">
           <a class="nav__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Html Academy</a>
