--- a/source/photo.html
+++ b/source/photo.html
@@ -1,119 +1,245 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Academy: Пинк</title>
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" type="text/html" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+
 </head>
-<body>
-  <header class="main-header">
-    <div class="main-nav__wrapper main-nav__wrapper--bg">
-      <nav class="main-nav main-nav--closed main-nav--no-js">
-        <div class="container">
-          <a class="logo" href="index.html"></a>
-          <button class="button-toggle"></button>
-        </div>
-        <ul class="main-nav__list">
-          <li class="main-nav__item"><a class="main-nav__link" href="#">Главная</a></li>
-          <li class="main-nav__item"><a class="main-nav__link main-nav__link--active">Фотографии</a></li>
-          <li class="main-nav__item"><a class="main-nav__link" href="#">Конкурс</a></li>
-          <li class="main-nav__item"><a class="main-nav__link" href="#">Html Academy</a></li>
-        </ul>
-      </nav>
-      <h1 class="main-title container">Фотографии пользователей</h1>
+
+<body class="body">
+  <header class="header js-header is-no-js">
+    <div class="header__wrapper">
+      <div class="header__top">
+        <a class="logo logo_mobile" href="index.html">
+          <svg class="icon icon_second icon_logo-mobile">
+            <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
+          </svg>
+        </a>
+        <button class="header__btn js-header__btn">
+          <svg class="icon icon_second icon_burger js-icon_toggle is-opened">
+            <use xlink:href="img/sprite.svg#icon-menu-burger"></use>
+          </svg>
+          <svg class="icon icon_second icon_close js-icon_toggle">
+            <use xlink:href="img/sprite.svg#icon-menu-cross"></use>
+          </svg>
+        </button>
+      </div>
     </div>
+    <nav class="nav js-nav is-no-js">
+      <ul class="nav__list">
+        <li class="nav__item">
+          <a class="nav__link" href="index.html">Главная</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link is-active">Фотографии</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link" href="form.html">Конкурс</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Html Academy</a>
+        </li>
+      </ul>
+    </nav>
   </header>
   <main class="main">
-    <p class="main__title container">Взгляните на фотографии, которые выкладывают пользователи!<br>Видите, как не хватает ваших?</p>
-    <section class="photo">
-      <a class="photo__picture-hit" href="#"><img src="img/panorama-mobile@1x.jpg" alt="photograph"></a>
-      <div class="container">
-        <div class="photo-box">
-          <p class="photo-box__name">Анна <span class="photo-box__time">(5 минут назад)</span></p>
-          <p class="photo-box__comment">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
-          <p class="photo-box__like"><a href="#"><img src="img/icon-heart.svg" width="13" height="12" alt=""></a>Нравится: 215</p>
+    <section class="banner">
+      <div class="banner__top banner__top_inner">
+        <div class="banner__title">
+          <h1 class="title title_one title_wrap_center">Фотографии пользователей</h1>
         </div>
-
-        <a class="photo__picture" href="#"><img src="img/photo-car-mobile@1x.jpg" alt="photograph"></a>
-        <div class="photo-box">
-          <p class="photo-box__name">Левон <span class="photo-box__time">(5 часов назад)</span></p>
-          <p class="photo-box__comment">Вчера он на луну летал, сегодня в руки к нам попал.</p>
-          <p class="photo-box__like"><a href="#"><img src="img/icon-heart.svg" width="13" height="12" alt=""></a>Нравится: 356</p>
-        </div>
-
-        <a class="photo__picture" href="#"><img src="img/photo-drumset-mobile@1x.jpg" alt="photograph"></a>
-        <div class="photo-box">
-          <p class="photo-box__name">Антон <span class="photo-box__time">(12 часов назад)</span></p>
-          <p class="photo-box__comment">Соседи будут рады!</p>
-          <p class="photo-box__like"><a href="#"><img src="img/icon-heart.svg" width="13" height="12" alt=""></a>Нравится: 666</p>
-        </div>
-
-        <a class="photo__picture" href="#"><img src="img/photo-window-mobile@1x.jpg" alt="photograph"></a>
-        <div class="photo-box">
-          <p class="photo-box__name">Борис <span class="photo-box__time">(20 часов назад)</span></p>
-          <p class="photo-box__comment">Здесь могла быть ваша цитата о высоком и вечном.</p>
-          <p class="photo-box__like"><a href="#"><img src="img/icon-heart.svg" width="13" height="12" alt=""></a>Нравится: 215</p>
-        </div>
-
-        <a class="photo__picture" href="#"><img src="img/photo-fair-mobile@1x.jpg" alt="photograph"></a>
-        <div class="photo-box">
-          <p class="photo-box__name">Сергей <span class="photo-box__time">(25 часов назад)</span></p>
-          <p class="photo-box__comment">Самая кубанская в мире!</p>
-          <p class="photo-box__like"><a href="#"><img src="img/icon-heart.svg" width="13" height="12" alt=""></a>Нравится: 4</p>
-        </div>
-
-        <a class="photo__picture" href="#"><img src="img/photo-pov-mobile@1x.jpg" alt="photograph"></a>
-        <div class="photo-box">
-          <p class="photo-box__name">Максим <span class="photo-box__time">(40 часов назад)</span></p>
-          <p class="photo-box__comment">Где снег-то?</p>
-          <p class="photo-box__like"><a href="#"><img src="img/icon-heart.svg" width="13" height="12" alt=""></a>Нравится: 150</p>
-        </div>
-
-        <a class="photo__picture" href="#"><img src="img/photo-wing-mobile@1x.jpg" alt="photograph"></a>
-        <div class="photo-box">
-          <p class="photo-box__name">Надежда <span class="photo-box__time">(45 часов назад)</span></p>
-          <p class="photo-box__comment">Всем GM и взаимные лайки!</p>
-          <p class="photo-box__like"><a href="#"><img src="img/icon-heart.svg" width="13" height="12" alt=""></a>Нравится: 2560</p>
-        </div>
-
       </div>
     </section>
-    <p class="main__title container">Затмите их всех!<br>Выкладывайте все, что накопилось в телефоне!</p>
-    <section class="upload">
+    <p class="main__title">Взгляните на фотографии, которые выкладывают пользователи!
+      Видите,&nbsp;как&nbsp;не&nbsp;хватает&nbsp;ваших?</p>
+    <section class="photo">
+      <a class="photo__picture" href="#">
+        <picture>
+          <img class="image" src="img/panorama-mobile@1x.jpg" alt="photo">
+        </picture>
+        <span class="photo__mark">Панорама дня</span>
+      </a>
       <div class="container">
-        <img class="upload__picture" src="img/photo-road-mobile@1x.jpg" alt="upload-img">
-        <div class="tools upload__tools">
-          <a class="tools__item tools__item--crop" href="#"></a>
-          <a class="tools__item tools__item--fill" href="#"></a>
-          <a class="tools__item tools__item--contrast" href="#"></a>
-          <div class="range">
-            <div class="range__line"></div>
-            <div class="range__button"></div>
-          </div>
+        <div class="photo__info">
+          <p class="photo__name">Анна <span class="photo__time">(5 минут назад)</span></p>
+          <p class="photo__comment">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в
+            перископе, задавайте свои вопросы!</p>
+          <p class="photo__handler">
+            <a class="photo__like" href="#">
+              <svg class="icon icon_third icon_size_s">
+                <use xlink:href="img/sprite.svg#icon-heart"></use>
+              </svg>Нравится: 215
+            </a>
+          </p>
         </div>
-        <a class="button-upload" href="#">Запостить</a>
-        <a class="button-upload" href="#">Отмена</a>
+        <a class="photo__picture" href="#">
+          <picture>
+            <img class="image" src="img/photo-car-mobile@1x.jpg" alt="photo">
+          </picture>
+        </a>
+        <div class="photo__info">
+          <p class="photo__name">Левон <span class="photo__time">(5 часов назад)</span></p>
+          <p class="photo__comment">Вчера он на луну летал, сегодня в руки к нам попал.</p>
+          <p class="photo__handler">
+            <a class="photo__like" href="#">
+              <svg class="icon icon_third icon_size_s">
+                <use xlink:href="img/sprite.svg#icon-heart"></use>
+              </svg>Нравится: 356
+            </a>
+          </p>
+        </div>
+        <a class="photo__picture" href="#">
+          <picture>
+            <img class="image" src="img/photo-drumset-mobile@1x.jpg" alt="photo">
+          </picture>
+        </a>
+        <div class="photo__info">
+          <p class="photo__name">Антон <span class="photo__time">(12 часов назад)</span></p>
+          <p class="photo__comment">Соседи будут рады!</p>
+          <p class="photo__handler">
+            <a class="photo__like" href="#">
+              <svg class="icon icon_third icon_size_s">
+                <use xlink:href="img/sprite.svg#icon-heart"></use>
+              </svg>Нравится: 666
+            </a>
+          </p>
+        </div>
+        <a class="photo__picture" href="#">
+          <picture>
+            <img class="image" src="img/photo-window-mobile@1x.jpg" alt="photo">
+          </picture>
+        </a>
+        <div class="photo__info">
+          <p class="photo__name">Борис <span class="photo__time">(20 часов назад)</span></p>
+          <p class="photo__comment">Здесь могла быть ваша цитата о высоком и вечном.</p>
+          <p class="photo__handler">
+            <a class="photo__like" href="#">
+              <svg class="icon icon_third icon_size_s">
+                <use xlink:href="img/sprite.svg#icon-heart"></use>
+              </svg>Нравится: 215
+            </a>
+          </p>
+        </div>
+        <a class="photo__picture" href="#">
+          <picture>
+            <img class="image" src="img/photo-fair-mobile@1x.jpg" alt="photo">
+          </picture>
+        </a>
+        <div class="photo__info">
+          <p class="photo__name">Сергей <span class="photo__time">(25 часов назад)</span></p>
+          <p class="photo__comment">Самая кубанская в мире!</p>
+          <p class="photo__handler">
+            <a class="photo__like" href="#">
+              <svg class="icon icon_third icon_size_s">
+                <use xlink:href="img/sprite.svg#icon-heart"></use>
+              </svg>Нравится: 4
+            </a>
+          </p>
+        </div>
+        <a class="photo__picture" href="#">
+          <picture>
+            <img class="image" src="img/photo-pov-mobile@1x.jpg" alt="photo">
+          </picture>
+        </a>
+        <div class="photo__info">
+          <p class="photo__name">Максим <span class="photo__time">(40 часов назад)</span></p>
+          <p class="photo__comment">Где снег-то?</p>
+          <p class="photo__handler">
+            <a class="photo__like" href="#">
+              <svg class="icon icon_third icon_size_s">
+                <use xlink:href="img/sprite.svg#icon-heart"></use>
+              </svg>Нравится: 150
+            </a>
+          </p>
+        </div>
+        <a class="photo__picture" href="#">
+          <picture>
+            <img class="image" src="img/photo-wing-mobile@1x.jpg" alt="photo">
+          </picture>
+        </a>
+        <div class="photo__info">
+          <p class="photo__name">Надежда <span class="photo__time">(45 часов назад)</span></p>
+          <p class="photo__comment">Всем GM и взаимные лайки!</p>
+          <p class="photo__handler">
+            <a class="photo__like" href="#">
+              <svg class="icon icon_third icon_size_s">
+                <use xlink:href="img/sprite.svg#icon-heart"></use>
+              </svg>Нравится: 2560
+            </a>
+          </p>
+        </div>
+      </div>
+    </section>
+    <p class="main__title">Затмите их всех! Выкладывайте&nbsp;все,&nbsp;что&nbsp;накопилось в телефоне!</p>
+    <section class="filter">
+      <div class="container">
+        <img class="image" src="img/photo-road-mobile@1x.jpg" alt="upload-img">
+        <div class="filter__group">
+          <button class="filter__item is-active">
+            <svg class="icon icon_first icon_size_xl">
+              <use xlink:href="img/sprite.svg#icon-editor-crop"></use>
+            </svg>
+          </button>
+          <button class="filter__item">
+            <svg class="icon icon_first icon_size_xl">
+              <use xlink:href="img/sprite.svg#icon-editor-fill"></use>
+            </svg>
+          </button>
+          <button class="filter__item">
+            <svg class="icon icon_first icon_size_xl">
+              <use xlink:href="img/sprite.svg#icon-editor-contrast"></use>
+            </svg>
+          </button>
+        </div>
+        <div class="filter__range">
+          <input class="range" type="range" name="range" min="0" max="100" value="50">
+          <div class="backfill"></div>
+        </div>
+      </div>
+      <div class="filter__buttons">
+        <a class="button button_brand button_size_l" href="#">Запостить</a>
+        <a class="button button_third button_size_l" href="#">Отмена</a>
       </div>
     </section>
   </main>
-  <footer class="main-footer container">
-    <a class="logo-full logo-full__main-footer" href="index.html"><img src="img/logo-pink-blue-mobile.svg" alt="logotype"></a>
-    <div class="social social__footer">
-      <a class="social__item social__item--twitter" href="#">Twitter</a>
-      <a class="social__item social__item--facebook" href="#">Facebook</a>
-      <a class="social__item social__item--youtube" href="#">YouTube</a>
+  <footer class="footer">
+    <a class="logo logo_tablet" href="index.html">
+      <svg class="icon icon_logo-tablet icon_first">
+        <use xlink:href="img/sprite.svg#logo-pink-blue-mobile"></use>
+      </svg>
+    </a>
+    <div class="social social_indent">
+      <a class="social__item social__item_tw" href="#">Twitter
+        <svg class="icon icon_social icon_third">
+          <use xlink:href="img/sprite.svg#icon-twitter"></use>
+        </svg>
+      </a>
+      <a class="social__item social__item_fb" href="#">Facebook
+        <svg class="icon icon_social icon_third">
+          <use xlink:href="img/sprite.svg#icon-facebook"></use>
+        </svg>
+      </a>
+      <a class="social__item social__item_yt" href="#">YouTube
+        <svg class="icon icon_social icon_third">
+          <use xlink:href="img/sprite.svg#icon-youtube"></use>
+        </svg>
+      </a>
     </div>
-    <div class="main-footer__copyright">
+    <div class="footer__copyright">
       <span>Разработано</span>
-      <a class="logo-htmlacademy" href="https://htmlacademy.ru/intensive/adaptive">
-        <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
-          <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.472,8.017l13.43-7.99l0.042-0.026V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 l-0.001-0.104L13.407,5.28l-0.088-0.056v0.109L1.925,12.118V3.147l11.547-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.013,1.415l5.904,3.513l-0.86,0.507l-5.031-2.992l-0.013,1.415l3.827,2.275l-0.782,0.523l-3.032-1.787 l-0.013,1.413l1.852,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.015,1.044l-7.941-4.728L5.395,19.65 l7.979,4.796l0.017,1.076l-7.972-4.741l-0.013,1.415l8.021,4.821l0.045,0.026l8.143-4.872v-1.268l-0.011-0.148v-3.761l3.415-2.036 v10.02L13.472,31.85L1.925,24.979V15.127z"/>
+      <a class="logo logo_academy" href="https://htmlacademy.ru/intensive/adaptive">
+        <svg class="icon icon_logo-academy icon_third">
+          <use xlink:href="img/sprite.svg#logo-htmlacademy"></use>
         </svg>
       </a>
     </div>
   </footer>
   <script src="scripts/scripts.js"></script>
+  <script src="scripts/svgxuse.min.js" defer></script>
 </body>
+
 </html>
