--- a/source/photo.html
+++ b/source/photo.html
@@ -207,7 +207,7 @@
     </section>
   </main>
   <footer class="footer">
-    <a class="logo logo_tablet" href="index.html">
+    <a class="logo logo_footer" href="index.html">
       <svg class="icon icon_logo-tablet icon_first">
         <use xlink:href="img/sprite.svg#logo-pink-blue-mobile"></use>
       </svg>
