--- a/source/form.html
+++ b/source/form.html
@@ -148,7 +148,7 @@
     </form>
   </main>
   <footer class="footer">
-    <a class="logo logo_tablet" href="index.html">
+    <a class="logo logo_footer" href="index.html">
       <svg class="icon icon_logo-tablet icon_first">
         <use xlink:href="img/sprite.svg#logo-pink-blue-mobile"></use>
       </svg>
